fix flexbox issue with IE11. Use align-items to center content

--- a/src/sass/_blog.scss
+++ b/src/sass/_blog.scss
@@ -107,7 +107,6 @@
 
     & {
       max-width: 980px;
-      margin: 0 auto;
     }
 
     h2 {
