--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,7 +1,8 @@
 footer {
+  width: 100%;
+  height: 60px;
   margin-top: auto;
   padding: 0 15px;
-  height: 60px;
   background: #eee;
   display: flex;
   align-items: center;
