--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,5 @@
 .navbar-container {
+  width: 100%;
   height: 60px;
   background: #eee;
 
