--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -10,8 +10,20 @@ body {
   padding: 0;
   color: #000;
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   flex-direction: column;
+  align-items: center;
+
+  > {
+    header,
+    footer {
+      flex-shrink: 0;
+    }
+
+    .content {
+      flex: 1 0 auto;
+    }
+  }
 }
 
 .clearfix {
