--- a/src/sass/pokemon-go/map.scss
+++ b/src/sass/pokemon-go/map.scss
@@ -1,6 +1,5 @@
 .pokemon-go {
   width: 980px;
-  margin: 0 auto;
   padding: 60px 0;
 
   h2 {
